# c_fpow

./: CMakeLists.txt
src/: CMakeLists.txt  fpow.c  fpow.h  main.c  main.h
src/nmath/: CMakeLists.txt  chebyshev.c  cospi.c  d1mach.c  dbeta.c  dnorm.c  gamma.c  i1mach.c  mlutils.c  nmath.h  pf.c  pgamma.c  pnorm.c  qbeta.c  qpois.c  toms708.c
